src/themes/styles/style.styl
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,300');

body
	font-family 'Open Sans', sans-serif


.main-nav
	display flex
	justify-content space-between
	li
		text-transform capitalize

.lang-swtch
	width 80px
	cursor pointer

.main-header
	display flex
	justify-content space-between
	align-items center


.logo
	display flex
	flex-grow 0
	align-items center
	h2
		padding 6px 10px
		border 4px solid #57c7ed
		color #57c7ed
		border-left none
		margin 0 0 0 10px
		font-weight bold
		letter-spacing 3px
	&:hover
		text-decoration none
		h2
			background-color #57c7ed
			color #fff
	&:link
		text-decoration none

.error-box-form
	padding-top 12px

.user-item-panel-body
	display flex
	justify-content space-between

.user-item-panel
	margin-bottom 0

.user-list-group-item
	padding 15px

.post-pre-panel
	box-shadow none
	margin-bottom 0

.pre-post-list-group-item
	padding-bottom 0
	padding-left 0
	padding-right 0
	margin-bottom 20px

.pre-post-f-pannel
	margin-right 0

.panel.post-pre-panel
	.panel-heading
		display flex
		align-items center
		justify-content space-between
		border-bottom 1px solid #eee
	.panel-body
		padding 20px 15px
	.panel-footer
		display flex
		align-items center
		justify-content space-between

.author-post
	i.fa-user
		margin-right 6px

.icon-user-select
	display flex
	align-items center

.user-role
	margin-left 13px
	font-size 16px

.acc-users-list
	a[href^="mailto:"]
		display none
	.panel-default
		border-radius 3px
		overflow hidden
	.panel-body
		padding 9px
	.panel-heading
		font-size 12px
	.user-list-group-item
		padding 0
		border none
		margin-bottom 15px

.widgt-adds
	padding 9px
	margin-bottom 0
	list-style none

.form-main-act
	margin-top 10px
	display flex
	align-items center
	justify-content space-between

.write-post-form
	textarea
		height 117px
		resize none

.wdgt-post-photo-inpt
	display none !important

.wdgt-post-photo-btn
	cursor pointer

.busy-loader
	background-color rgba(255, 255, 255, 0.65)
	text-align center

.loader-wrapp
	width 50px
	height 50px
	position absolute
	top 80px
	left 50%
	transform translate(-50%, -20%)
	.loader-inner
		width 50px
		height 50px
		animation spinReturn 4s ease infinite
		&, &:before
			position absolute
			top 0
			left 0
			display block
			background-color #248ACC
			opacity: .9
			transform-origin 50% 50%
		&:before
			content ''
			width 100%
			height 100%
			transform rotate(45deg)

.loader-text
	padding 24px
	display inline-block
	width 50%
	border 2px solid rgba(36, 138, 204, 0.55)
	color rgba(51, 122, 183, 0.71)
	font-weight bold
	border-left none
	border-right none

.angular-google-map-container
	height 500px

@keyframes spinReturn {
	0% {
		transform rotate(0deg)
	}
	25% {
		transform rotate(225deg)
	}
	50% {
		transform rotate(180deg)
	}
	75% {
		transform rotate(405deg)
	}
	100% {
		transform rotate(360deg)
	}
}

